--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="name">山田 太郎</div>
+        <div class="name">砂田 界渡</div>
         <nav class="navbar">
             <ul>
                 <li><a href="#career">経歴</a></li>
@@ -52,7 +52,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 山田 太郎. All Rights Reserved.</p>
+        <p>&copy; 2025 砂田 界渡. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
