--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="name">砂田 界渡</div>
+        <div class="header-content">
+            <div class="name">砂田 界渡</div>
+            <img src="ritsumeikan_logo.png" alt="立命館大学ロゴ" class="logo">
+        </div>
         <nav class="navbar">
             <ul>
                 <li><a href="#career">経歴</a></li>
