--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#career">経歴</a></li>
+                <li><a href="#career">Profile</a></li>
                 <li><a href="#links">外部リンク</a></li>
-                <li><a href="#certifications">持ってる資格</a></li>
-                <li><a href="#research">研究内容</a></li>
-                <li><a href="#publications">論文</a></li>
+                <li><a href="#certifications">Skill</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#publications">Publication</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="career">
-            <h2>経歴</h2>
-            <p>山田 太郎は、○○大学を卒業後、研究者として活動しています。</p>
+            <h2>Profile</h2>
+            <div class="career-content">
+                <div class="career-text">
+                    <p>2023年　立命館大学情報理工学部　卒業</p>
+                </div>
+                <div class="career-image">
+                    <img src="sunada.png" alt="経歴の画像" />
+                </div>
+            </div>
         </section>
         <section id="links">
             <h2>外部リンク</h2>
@@ -35,7 +42,7 @@
             </ul>
         </section>
         <section id="certifications">
-            <h2>持ってる資格</h2>
+            <h2>Skill</h2>
             <ul>
                 <li>基本情報技術者試験</li>
                 <li>TOEIC 900点</li>
@@ -43,11 +50,11 @@
             </ul>
         </section>
         <section id="research">
-            <h2>研究内容</h2>
+            <h2>Research</h2>
             <p>私の研究分野は、人工知能、機械学習、およびデータ解析です。</p>
         </section>
         <section id="publications">
-            <h2>論文</h2>
+            <h2>Publication</h2>
             <ul>
                 <li>「AIを活用した最適化手法」 - 2022年</li>
                 <li>「データ分析における新しい視点」 - 2023年</li>
