--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <section id="publications">
             <h2>Publication</h2>
             <ul>
-                <li><a href="swo-sunada.pdf">砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：
-                    機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案，
-                    人工知能学会第二種研究会資料　セマンティックウェブとオントロジー研究会　SIG-SWO-064-03 (2024)</a></li>
+                <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：
+                    <a href="swo-sunada.pdf">機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案</a>，
+                    人工知能学会第二種研究会資料　セマンティックウェブとオントロジー研究会　SIG-SWO-064-03 (2024)</li>
             </ul>
         </section>
     </main>
