--- a/index.html
+++ b/index.html
@@ -26,11 +26,45 @@
             <h2>Profile</h2>
             <div class="career-content">
                 <div class="career-text">
-                    <p>2023年　立命館大学情報理工学部　卒業</p>
-                    <ul>
-                        <li><a href="https://github.com/k-suna" target="_blank">GitHub</a></li>
-                        <li><a href="https://www.linkedin.com/in/kaito-sunada/" target="_blank">LinkedIn</a></li>
-                    </ul>
+                    <p>2023年3月　立命館大学情報理工学部情報理工学科　卒業</p>
+                    <p>2023年4月　立命館大学大学院情報理工学研究科情報理工学専攻博士課程前期課程計算機科学コース　入学</p>
+                    <br>
+                    <p>所属研究室</p>
+                    <li>2022年4月～2024年3月
+                        <a href="https://www.ritsumei.ac.jp/~y-kita/kcl/index.html" target="_blank">
+                          <p>ナレッジコンピューティング研究室</p>
+                        </a>
+                    </li>
+                    <li>2024年4月～2025年3月
+                        <a href="https://www.si-lab.org/index-ja.html" target="_blank">
+                          <p>社会知能研究室</p>
+                        </a>
+                    </li>
+                    <br>
+                    <p>関連リンク</p>
+                        <ul>
+                            <li>
+                                <a href="https://www.instagram.com/suna_0130/" target="_blank">
+                                    <img src="instagram_logo.png" alt="Instagram" class="link-logo">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/k-suna" target="_blank">
+                                    <img src="github_logo.png" alt="GitHub" class="link-logo">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://qiita.com/k-suna" target="_blank">
+                                    <img src="qiita_logo.png" alt="Qiita" class="link-logo">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/kaito-sunada/" target="_blank">
+                                    <img src="linkedin_logo.png" alt="LinkedIn" class="link-logo">
+                                </a>
+                            </li>
+                        </ul>
+
                 </div>
                 <div class="career-image">
                     <img src="sunada.png" alt="経歴の画像" />
