--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             <h2>Skill</h2>
             <ul>
                 <li>基本情報技術者試験</li>
+                <li>Python</li>
+                <li>オントロジー</li>
                 <li>TOEIC 650点</li>
                 <li>簿記3級</li>
                 <li>FP3級</li>
