--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h2>Profile</h2>
             <div class="career-content">
                 <div class="career-text">
-                    <p>2023年3月　立命館大学情報理工学部情報理工学科　卒業</p>
-                    <p>2023年4月　立命館大学大学院情報理工学研究科情報理工学専攻博士課程前期課程計算機科学コース　入学</p>
+                    <p>2023年3月　立命館大学 情報理工学部 情報理工学科　卒業</p>
+                    <p>2023年4月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　入学</p>
                     <br>
                     <p>所属研究室</p>
                     <li>2022年4月～2024年3月
@@ -86,25 +86,16 @@
         <section id="research">
             <h2>Research</h2>
             <h3>無機材料分析手法の選択支援のためのオントロジーの構築とシステムの開発</h3>
-            <p>無機材料の製造において，物質の材質や内部構造の調査のために材料の分析が重要であり，
-                分析目的に応じた最適な分析手法を選択する必要がある．<br>
-                例えば，材料内の空洞(ボイド)の有無の調査が依頼目的であれば，「X線CT法」という分析手法を選ぶ必要がある．<br>
-                しかし，分析手法は共同研究先企業で用いているものだけでも約100種類あり，
-                現状では特に経験の浅い技術者が数ある分析手法の中から最適な分析手法を選択することは，
-                無機材料やX線・電子線といった使用媒体などの特性や依頼された調査目的，
-                その分析手法によって明らかにできる性質などに基づいて総合的に判断する必要があるため，困難な場合がある．<br>
-                そこで，分析依頼書を与えてテキスト解析し手法を推薦するシステムが提案された．<br>
-                しかしながら，語彙の定義や抽象度が不明瞭であることから，プログラムが複雑になり，
-                メンテナンス性が低下する課題があった．<br>
-                そこで共同研究全体の最終的な目標として，分析依頼書の内容から最適な手法を推薦するシステムの開発を目指し，
-                本研究ではそのための分析目的と分析手法に関するオントロジーを構築する．<br>
-                具体的には，分析依頼書に記載された分析目的を部分行為に分解し，
-                その部分行為を達成する分析手法を出力するよう概念を定義する．<br>
-                加えて，その分析手法が用いる分析装置が適切かどうかを判断するために分析条件と結び付けて概念を定義する．<br>
-                これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦することを目指す．<br>
-                また，構築したオントロジーを組み込んだ推薦システムを開発し，実証する．<br>
-                評価の結果，過去の分析依頼に対して概ね適切に処理できたことから，
-                オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
+            <p>　無機材料の製造において，物質の材質や内部構造の調査のために材料の分析が重要であり，分析目的に応じた最適な分析手法を選択する必要がある．例えば，材料内の空洞(ボイド)の有無の調査が依頼目的であれば，「X線CT法」という分析手法を選ぶ必要がある．<br>
+                　しかしながら，現状では特に経験の浅い技術者が数ある分析手法の中から最適な分析手法を選択することは，無機材料やX線・電子線といった使用媒体などの特性や依頼された調査目的，その分析手法によって明らかにできる性質などに基づいて総合的に判断する必要があるため，困難な場合がある．<br>
+                　そこで，分析依頼書を与えてテキスト解析し手法を推薦するシステムが提案されたが，語彙の定義や抽象度が不明瞭であることから，プログラムが複雑になり，メンテナンス性が低下する課題があった．<br>
+                　そのため，共同研究全体の最終的な目標として，分析依頼書の内容から最適な手法を推薦するシステムの開発を目指し，本研究ではそのための分析目的と分析手法に関するオントロジーを構築した．具体的には，分析依頼書に記載された分析目的を部分行為に分解し，その部分行為を達成する分析手法を出力するよう概念を定義した．加えて，その分析手法が用いる分析装置が適切かどうかを判断するために分析条件と結び付けて概念を定義した．<br>
+                　これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦するオントロジーとシステムを開発することができた．<br>
+                　また，システムを実証した結果，過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
+            <figure>
+                <img src="ontology.png" alt="Ontology" class="research-image">
+                <figcaption>オントロジーの全体像</figcaption>
+            </figure>
         </section>
         <section id="publications">
             <h2>Publication</h2>
