--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 　これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦するオントロジーとシステムを開発することができた．<br>
                 　また，システムを実証した結果，過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
             <figure>
-                <img src="ontology.png" alt="Ontology" class="research-image">
+                <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 100%; height: auto;>
                 <figcaption>オントロジーの全体像</figcaption>
             </figure>
         </section>
