--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 砂田 界渡 All Rights Reserved.</p>
+        <p>&copy; 2025 Kaito Sunada. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
