--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 　また，システムを実証した結果，過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
             <div id="images">
                 <figure>
-                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 100%; height: auto;>
+                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 100%; height: auto;">
                     <figcaption>オントロジーの全体像</figcaption>
                 </figure>
             </div>
