--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         </a>
                     </li>
                     <br>
+                    <div class="related link">
                     <p>関連リンク</p>
                         <ul>
                             <li>
@@ -64,7 +65,7 @@
                                 </a>
                             </li>
                         </ul>
-
+                    </div>
                 </div>
                 <div class="career-image">
                     <img src="sunada.png" alt="経歴の画像" />
@@ -73,15 +74,17 @@
         </section>
         <section id="certifications">
             <h2>Skill</h2>
-            <ul>
-                <li>基本情報技術者試験</li>
-                <li>Python</li>
-                <li>オントロジー</li>
-                <li>TOEIC 650点</li>
-                <li>簿記3級</li>
-                <li>FP3級</li>
-                <li>世界遺産検定2級</li>
-            </ul>
+            <div class="related link">
+                <ul>
+                    <li>基本情報技術者試験</li>
+                    <li>Python</li>
+                    <li>オントロジー</li>
+                    <li>TOEIC 650点</li>
+                    <li>簿記3級</li>
+                    <li>FP3級</li>
+                    <li>世界遺産検定2級</li>
+                </ul>
+            </div>
         </section>
         <section id="research">
             <h2>Research</h2>
