--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <br>
-                    <div class="related link">
+                    <div class="related">
                     <p>関連リンク</p>
                         <ul>
                             <li>
@@ -74,7 +74,7 @@
         </section>
         <section id="certifications">
             <h2>Skill</h2>
-            <div class="related link">
+            <div class="related">
                 <ul>
                     <li>基本情報技術者試験</li>
                     <li>Python</li>
