--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <section id="career">
             <div class="career-content">
                 <div class="career-text">
+                    <p>2019年3月　兵庫県立豊岡高校　普通科　卒業</p>
+                    <p>2019年4月　立命館大学 情報理工学部 情報理工学科　入学</p>
                     <p>2023年3月　立命館大学 情報理工学部 情報理工学科　卒業</p>
                     <p>2023年4月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　入学</p>
                     <br>
@@ -69,6 +71,15 @@
                 </div>
                 <div class="career-image">
                     <img src="sunada.png" alt="経歴の画像" />
+                    <br>
+                    <p>趣味・特技</p>
+                    <li>筋トレ</li>
+                    <li>すみっコぐらし</li>
+                    <li>ルービックキューブ</li>
+                    <li>お団子巡り</li>
+                    <li>プログラミング</li>
+                    <li>テニス</li>
+                    <li>アカペラ</li>
                 </div>
             </div>
         </section>
@@ -106,7 +117,7 @@
             <h2>Publication</h2>
             <ul>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：
-                    <a href="swo-sunada.pdf">機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案</a>，
+                    <a href="swo-sunada.pdf">無機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案</a>，
                     人工知能学会第二種研究会資料　セマンティックウェブとオントロジー研究会　SIG-SWO-064-03 (2024)</li>
             </ul>
         </section>
