--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
         <section id="career">
             <div class="career-content">
                 <div class="career-text">
+                    <p>【経歴】</p>
                     <p>2019年3月　兵庫県立豊岡高校　普通科　卒業</p>
                     <p>2019年4月　立命館大学 情報理工学部 情報理工学科　入学</p>
+                    <p>2021年7月　2021年度春学期立命館大学西園寺記念奨学金（成績優秀者枠）　受賞</p>
+                    <p>2022年7月　2022年度春学期立命館大学西園寺記念奨学金（成績優秀者枠）　受賞</p>
                     <p>2023年3月　立命館大学 情報理工学部 情報理工学科　卒業</p>
                     <p>2023年4月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　入学</p>
+                    <p>2023年4月　立命館大学大学院　1年次対象成績優秀者奨学金　受賞</p>
                     <br>
-                    <p>所属研究室</p>
+                    <p>【所属研究室】</p>
                     <li>2022年4月～2024年3月
                         <a href="https://www.ritsumei.ac.jp/~y-kita/kcl/index.html" target="_blank">
                           <p>ナレッジコンピューティング研究室</p>
@@ -44,7 +48,7 @@
                     </li>
                     <br>
                     <div class="related">
-                    <p>関連リンク</p>
+                    <p>【関連リンク】</p>
                         <ul>
                             <li>
                                 <a href="https://www.instagram.com/suna_0130/" target="_blank">
@@ -72,12 +76,14 @@
                 <div class="career-image">
                     <img src="sunada.png" alt="経歴の画像" />
                     <br>
-                    <p>趣味・特技</p>
+                    <p>【趣味・特技】</p>
                     <li>筋トレ</li>
                     <li>すみっコぐらし</li>
                     <li>ルービックキューブ</li>
                     <li>お団子巡り</li>
+                    <li>アニメ鑑賞</li>
                     <li>プログラミング</li>
+                    <li>野球</li>
                     <li>テニス</li>
                     <li>アカペラ</li>
                 </div>
@@ -89,6 +95,7 @@
                 <ul>
                     <li>基本情報技術者試験</li>
                     <li>Python</li>
+                    <li>Java</li>
                     <li>オントロジー</li>
                     <li>TOEIC 650点</li>
                     <li>簿記3級</li>
