--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                     <li>野球</li>
                     <li>テニス</li>
                     <li>アカペラ</li>
+                    <br>
+                    <p>【主な制作物】</p>
+                    <li>教授格言ボット</li>
+                    <li>アーティスト推薦システム</li>
+                    <li>無機材料分析手法の推薦ボット</li>
                 </div>
             </div>
         </section>
