--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>砂田 界渡</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/favicon_sunada.ico" type="image/x-icon">
 </head>
 <body>
     <header>
