--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <section id="career">
             <div class="career-content">
                 <div class="career-text">
+                    <p>【プロフィール】</p>
+                    <p>砂田界渡（スナダカイト）　2001年1月30日生まれ　兵庫県出身　O型</p>
+                    <br>
                     <p>【経歴】</p>
                     <p>2019年3月　兵庫県立豊岡高校　普通科　卒業</p>
                     <p>2019年4月　立命館大学 情報理工学部 情報理工学科　入学</p>
@@ -81,6 +84,8 @@
                     <li>筋トレ</li>
                     <li>すみっコぐらし</li>
                     <li>ルービックキューブ</li>
+                    <li>麻雀</li>
+                    <li>御朱印集め</li>
                     <li>お団子巡り</li>
                     <li>アニメ鑑賞</li>
                     <li>プログラミング</li>
@@ -91,7 +96,7 @@
                     <p>【主な制作物】</p>
                     <li>教授格言ボット</li>
                     <li>アーティスト推薦システム</li>
-                    <li>無機材料分析手法の推薦ボット</li>
+                    <li>無機材料分析手法の推薦ボット（研究）</li>
                 </div>
             </div>
         </section>
