--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                     <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 100%; height: auto;">
                     <figcaption>オントロジーの全体像</figcaption>
                 </figure>
+                <figure>
+                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 100%; height: auto;">
+                    <figcaption>分析手法オントロジーの一例</figcaption>
+                </figure>
+                <figure>
+                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 100%; height: auto;">
+                    <figcaption>分析手法推薦システム</figcaption>
+                </figure>
             </div>
         </section>
         <section id="publications">
