--- a/index.html
+++ b/index.html
@@ -126,15 +126,19 @@
                 　また，システムを実証した結果，過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
             <div id="images">
                 <figure>
-                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 33%; height: auto;">
+                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
                     <figcaption>オントロジーの全体像</figcaption>
                 </figure>
                 <figure>
-                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 33%; height: auto;">
+                    <img src="sem-edx_ontology.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
                     <figcaption>分析手法オントロジーの一例</figcaption>
                 </figure>
                 <figure>
-                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 33%; height: auto;">
+                    <img src="chat1.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
+                    <figcaption>分析手法推薦システム</figcaption>
+                </figure>
+                <figure>
+                    <img src="chat2.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
                     <figcaption>分析手法推薦システム</figcaption>
                 </figure>
             </div>
