--- a/index.html
+++ b/index.html
@@ -124,21 +124,21 @@
                 　そのため，共同研究全体の最終的な目標として，分析依頼書の内容から最適な手法を推薦するシステムの開発を目指し，本研究ではそのための分析目的と分析手法に関するオントロジーを構築した．具体的には，分析依頼書に記載された分析目的を部分行為に分解し，その部分行為を達成する分析手法を出力するよう概念を定義した．加えて，その分析手法が用いる分析装置が適切かどうかを判断するために分析条件と結び付けて概念を定義した．<br>
                 　これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦するオントロジーとシステムを開発することができた．<br>
                 　また，システムを実証した結果，過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
-            <div class="images">
+            <div class="research-images">
                 <figure>
-                    <img src="ontology.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
+                    <img src="ontology.png" alt="Ontology" class="research-image1">
                     <figcaption>オントロジーの全体像</figcaption>
                 </figure>
                 <figure>
-                    <img src="sem-edx_ontology.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
+                    <img src="sem-edx_ontology.png" alt="Ontology" class="research-image2">
                     <figcaption>分析手法オントロジーの一例</figcaption>
                 </figure>
                 <figure>
-                    <img src="chat1.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
+                    <img src="chat1.png" alt="Ontology" class="research-image3">
                     <figcaption>分析手法推薦システム</figcaption>
                 </figure>
                 <figure>
-                    <img src="chat2.png" alt="Ontology" class="research-image" style="max-width: 25%; height: auto;">
+                    <img src="chat2.png" alt="Ontology" class="research-image4">
                     <figcaption>分析手法推薦システム</figcaption>
                 </figure>
             </div>
