--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                 </figure>
                 <figure>
                     <img src="chat1.png" alt="Ontology" class="research-image3">
-                    <figcaption>分析手法推薦システム</figcaption>
+                    <figcaption>分析手法推薦システムの一例</figcaption>
                 </figure>
                 <figure>
                     <img src="chat2.png" alt="Ontology" class="research-image4">
-                    <figcaption>分析手法推薦システム</figcaption>
+                    <figcaption>分析手法推薦システムの一例</figcaption>
                 </figure>
             </div>
         </section>
