--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="https://x.com/sanduser9090" target="_blank">
+                                    <img src="x_logo.png" alt="X" class="link-logo">
+                                </a>
+                            </li>
+                            <li>
                                 <a href="https://github.com/k-suna" target="_blank">
                                     <img src="github_logo.png" alt="GitHub" class="link-logo">
                                 </a>
