--- a/index.html
+++ b/index.html
@@ -90,10 +90,13 @@
                     <li>すみっコぐらし</li>
                     <li>ルービックキューブ</li>
                     <li>麻雀</li>
+                    <li>写真</li>
                     <li>御朱印集め</li>
                     <li>お団子巡り</li>
                     <li>アニメ鑑賞</li>
                     <li>プログラミング</li>
+                    <li>AAA</li>
+                    <li>嵐</li>
                     <li>野球</li>
                     <li>テニス</li>
                     <li>アカペラ</li>
@@ -140,11 +143,11 @@
                 </figure>
                 <figure>
                     <img src="chat1.png" alt="Ontology" class="research-image3">
-                    <figcaption>分析手法推薦システムの一例</figcaption>
+                    <figcaption>分析手法推薦システムの一例(1)</figcaption>
                 </figure>
                 <figure>
                     <img src="chat2.png" alt="Ontology" class="research-image4">
-                    <figcaption>分析手法推薦システムの一例</figcaption>
+                    <figcaption>分析手法推薦システムの一例(2)</figcaption>
                 </figure>
             </div>
         </section>
