--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
             <h3>無機材料分析手法の選択支援のためのオントロジーの構築とシステムの開発</h3>
             <p>　無機材料の製造において，物質の材質や内部構造の調査のために材料の分析が重要であり，分析目的に応じた最適な分析手法を選択する必要がある．例えば，材料内の空洞(ボイド)の有無の調査が依頼目的であれば，「X線CT法」という分析手法を選ぶ必要がある．<br>
                 　しかしながら，現状では特に経験の浅い技術者が数ある分析手法の中から最適な分析手法を選択することは，無機材料やX線・電子線といった使用媒体などの特性や依頼された調査目的，その分析手法によって明らかにできる性質などに基づいて総合的に判断する必要があるため，困難な場合がある．<br>
-                　そこで，分析依頼書を与えてテキスト解析し手法を推薦するシステムが提案されたが，語彙の定義や抽象度が不明瞭であることから，プログラムが複雑になり，メンテナンス性が低下する課題があった．<br>
+                　そこで，共同研究先企業では，分析依頼書を与えてテキスト解析し手法を推薦するシステムが提案されたが，語彙の定義や抽象度が不明瞭であることから，プログラムが複雑になり，メンテナンス性が低下する課題があった．<br>
                 　そのため，共同研究全体の最終的な目標として，分析依頼書の内容から最適な手法を推薦するシステムの開発を目指し，本研究ではそのための分析目的と分析手法に関するオントロジーを構築した．具体的には，分析依頼書に記載された分析目的を部分行為に分解し，その部分行為を達成する分析手法を出力するよう概念を定義した．加えて，その分析手法が用いる分析装置が適切かどうかを判断するために分析条件と結び付けて概念を定義した．<br>
-                　これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦するオントロジーとシステムを開発することができた．<br>
-                　また，約1.6万件の過去の依頼文書から163件をランダムに抽出し，その文書を用いてシステムを評価した結果，満点10点に対して，平均値9.910点と非常に高い点数となった．これは下側95%信頼区間の値よりも高い数値であり，評価対象文書1.6万件でも高い得点平均値になると考えられる．過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
+                　これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦するオントロジーを開発することができた．<br>
+                　さらに，オントロジーの定義を利用して，分析手法を推薦するプロセスを考察し，その利用プロセスをもとにチャットボットを開発しました．本研究ではslackのBoltと呼ばれるフレームワークを使用した簡易的な推薦ボットを開発し，共同研究先企業の方で本格的な推薦ボットを開発した．<br>
+                　共同研究先企業による評価実験として，約1.6万件の過去の依頼文書から163件をランダムに抽出し，その文書を用いてチャットボットを操作し評価した結果，満点10点に対して，平均値9.910点と非常に高い点数となった．これは下側95%信頼区間の値よりも高い数値であり，評価対象文書1.6万件でも高い得点平均値になると考えられる．過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
             <div class="research-images">
                 <figure>
                     <img src="ontology.png" alt="Ontology" class="research-image1">
@@ -143,7 +144,7 @@
                 </figure>
                 <figure>
                     <img src="chat2.png" alt="Ontology" class="research-image3">
-                    <figcaption>分析手法推薦システムの一例</figcaption>
+                    <figcaption>簡易的な分析手法推薦システムの一例</figcaption>
                 </figure>
                 <figure>
                     <img src="evaluation item table results.png" alt="Ontology" class="research-image4">
