--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 　そこで，共同研究先企業では，分析依頼書を与えてテキスト解析し手法を推薦するシステムが提案されたが，語彙の定義や抽象度が不明瞭であることから，プログラムが複雑になり，メンテナンス性が低下する課題があった．<br>
                 　そのため，共同研究全体の最終的な目標として，分析依頼書の内容から最適な手法を推薦するシステムの開発を目指し，本研究ではそのための分析目的と分析手法に関するオントロジーを構築した．具体的には，分析依頼書に記載された分析目的を部分行為に分解し，その部分行為を達成する分析手法を出力するよう概念を定義した．加えて，その分析手法が用いる分析装置が適切かどうかを判断するために分析条件と結び付けて概念を定義した．<br>
                 　これにより，分析目的が与えられたとき分析手法と分析装置の条件を結び付けて，最適な分析手法を推薦するオントロジーを開発することができた．<br>
-                　さらに，オントロジーの定義を利用して，分析手法を推薦するプロセスを考察し，その利用プロセスをもとにチャットボットを開発した．本研究ではslackのBoltと呼ばれるフレームワークを使用した簡易的な推薦ボットを開発し，共同研究先企業の方で本格的な推薦ボットを開発した．<br>
+                　さらに，オントロジーの定義を利用して，分析手法を推薦するプロセスを考察し，その利用プロセスをもとにチャットボットを開発した．本研究ではSlackのBoltと呼ばれるフレームワークを使用した簡易的な推薦ボットを開発し，共同研究先企業の方で本格的な推薦ボットを開発した．<br>
                 　共同研究先企業による評価実験として，約1.6万件の過去の依頼文書から163件をランダムに抽出し，その文書を用いてチャットボットを操作し評価した．その結果，満点10点に対して，平均値9.910点と非常に高い点数となった．これは下側95%信頼区間の値よりも高い数値であり，評価対象文書1.6万件でも高い得点平均値になると考えられる．過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
             <div class="research-images">
                 <figure>
