--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                     <figcaption>オントロジー・システムの評価</figcaption>
                 </figure>
             </div>
+            <div class="fullscreen" id="fullscreen-view">
+                <img id="fullscreen-img" src="" alt="Expanded View">
+            </div>
         </section>
         <section id="publications">
             <h2>Publication</h2>
