--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
                 　共同研究先企業による評価実験として，約1.6万件の過去の依頼文書から163件をランダムに抽出し，その文書を用いてチャットボットを操作し評価した．その結果，満点10点に対して，平均値9.910点と非常に高い点数となった．これは下側95%信頼区間の値よりも高い数値であり，評価対象文書1.6万件でも高い得点平均値になると考えられる．過去の分析依頼に対して概ね適切に処理できたことから，オントロジーの妥当性・オントロジーのシステムへの実装が適切だったことが分かった．</p>
             <div class="research-images">
                 <figure>
-                    <img src="ontology.png" alt="Ontology" class="research-image1">
+                    <img src="ontology.png" alt="Ontology" class="research-image">
                     <figcaption>オントロジーの全体像</figcaption>
                 </figure>
                 <figure>
-                    <img src="sem-edx_ontology.png" alt="Ontology" class="research-image2">
+                    <img src="sem-edx_ontology.png" alt="Ontology" class="research-image">
                     <figcaption>分析手法オントロジーの一例</figcaption>
                 </figure>
                 <figure>
-                    <img src="chat2.png" alt="Ontology" class="research-image3">
+                    <img src="chat2.png" alt="Ontology" class="research-image">
                     <figcaption>簡易的な分析手法推薦システムの一例</figcaption>
                 </figure>
                 <figure>
-                    <img src="evaluation item table results.png" alt="Ontology" class="research-image4">
+                    <img src="evaluation item table results.png" alt="Ontology" class="research-image">
                     <figcaption>オントロジー・システムの評価</figcaption>
                 </figure>
                 <div class="fullscreen" id="fullscreen-view">
