--- a/index.html
+++ b/index.html
@@ -150,8 +150,13 @@
                     <img src="evaluation item table results.png" alt="Ontology" class="research-image">
                     <figcaption>オントロジー・システムの評価</figcaption>
                 </figure>
-                <div class="fullscreen" id="fullscreen-view">
+<!--                 <div class="fullscreen" id="fullscreen-view">
                     <img id="fullscreen-img" src="" alt="Expanded View">
+                </div> -->
+                <!-- ポップアップ用のオーバーレイ -->
+                <div class="overlay" id="overlay">
+                    <button class="close-btn" id="close-btn">&times;</button>
+                    <img id="popup-img" class="popup-image" src="" alt="Popup Image">
                 </div>
             </div>
         </section>
