--- a/index.html
+++ b/index.html
@@ -91,15 +91,18 @@
                     <li>ルービックキューブ</li>
                     <li>麻雀</li>
                     <li>写真</li>
+                    <li>旅行</li>
                     <li>御朱印集め</li>
                     <li>お団子巡り</li>
-                    <li>アニメ鑑賞</li>
+                    <li>アニメ・ドラマ鑑賞</li>
                     <li>プログラミング</li>
+                    <li>オントロジー（研究）</li>
                     <li>AAA</li>
                     <li>嵐</li>
                     <li>野球</li>
                     <li>テニス</li>
                     <li>アカペラ</li>
+                    <li>カラオケ</li>
                     <br>
                     <p>【主な制作物】</p>
                     <li>教授格言ボット</li>
