--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
             <ul>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：無機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案，
                     人工知能学会第二種研究会資料，セマンティックウェブとオントロジー研究会，SIG-SWO-064-03，2024. <br>
-                    <a href="swo-sunada.pdf">Article(PDF,1.2MB)</a>,<a href="https://doi.org/10.11517/jsaisigtwo.2024.SWO-064_03">Article page(on J-Stage)</a></li>
+                    <a href="swo-sunada.pdf">Article(PDF,1.2MB)</a> (<a href="https://doi.org/10.11517/jsaisigtwo.2024.SWO-064_03">Article page site</a>)
+                </li>
             </ul>
         </section>
     </main>
