--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <p>2019年3月　兵庫県立豊岡高校　普通科　卒業</p>
                     <p>2019年4月　立命館大学 情報理工学部 情報理工学科　入学</p>
                     <p>2021年7月　2021年度春学期立命館大学西園寺記念奨学金（成績優秀者枠）　受賞</p>
+                    <p>2022年6月　キーエンス財団応援給付金　受給</p>
                     <p>2022年7月　2022年度春学期立命館大学西園寺記念奨学金（成績優秀者枠）　受賞</p>
                     <p>2023年3月　立命館大学 情報理工学部 情報理工学科　卒業</p>
                     <p>2023年4月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　入学</p>
@@ -168,7 +169,7 @@
             <ul>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：無機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案，
                     人工知能学会第二種研究会資料，セマンティックウェブとオントロジー研究会，SIG-SWO-064-03，2024. <br>
-                    <a href="swo-sunada.pdf">Article(PDF,1.2MB)</a> (<a href="https://doi.org/10.11517/jsaisigtwo.2024.SWO-064_03">Article page site</a>)
+                    <a href="swo-sunada.pdf">Article</a> (<a href="https://doi.org/10.11517/jsaisigtwo.2024.SWO-064_03">Article page site</a>)
                 </li>
             </ul>
         </section>
