--- a/index.html
+++ b/index.html
@@ -86,29 +86,31 @@
                 <div class="career-image">
                     <img src="sunada.png" alt="経歴の画像" />
                     <br>
-                    <p>【趣味・特技】</p>
-                    <li>筋トレ</li>
-                    <li>すみっコぐらし</li>
-                    <li>ルービックキューブ</li>
-                    <li>麻雀</li>
-                    <li>写真</li>
-                    <li>旅行</li>
-                    <li>御朱印集め</li>
-                    <li>お団子巡り</li>
-                    <li>アニメ・ドラマ鑑賞</li>
-                    <li>プログラミング</li>
-                    <li>オントロジー（研究）</li>
-                    <li>AAA</li>
-                    <li>嵐</li>
-                    <li>野球</li>
-                    <li>テニス</li>
-                    <li>アカペラ</li>
-                    <li>カラオケ</li>
-                    <br>
-                    <p>【主な制作物】</p>
-                    <li>教授格言ボット</li>
-                    <li>アーティスト推薦システム</li>
-                    <li>無機材料分析手法の推薦ボット（研究）</li>
+                    <div class="hobby">
+                        <p>【趣味・特技】</p>
+                        <li>筋トレ</li>
+                        <li>すみっコぐらし</li>
+                        <li>ルービックキューブ</li>
+                        <li>麻雀</li>
+                        <li>写真</li>
+                        <li>旅行</li>
+                        <li>御朱印集め</li>
+                        <li>お団子巡り</li>
+                        <li>アニメ・ドラマ鑑賞</li>
+                        <li>プログラミング</li>
+                        <li>オントロジー（研究）</li>
+                        <li>AAA</li>
+                        <li>嵐</li>
+                        <li>野球</li>
+                        <li>テニス</li>
+                        <li>アカペラ</li>
+                        <li>カラオケ</li>
+                        <br>
+                        <p>【主な制作物】</p>
+                        <li>教授格言ボット</li>
+                        <li>アーティスト推薦システム</li>
+                        <li>無機材料分析手法の推薦ボット（研究）</li>
+                    </div>
                 </div>
             </div>
         </section>
