--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     </div>
                 </div>
                 <div class="career-image">
-                    <img src="sunada.png" alt="経歴の画像" />
+                    <div class="career-image face">
+                        <img src="sunada.png" alt="経歴の画像" />
+                    </div>
                     <br>
                     <div class="hobby">
                         <p>【趣味・特技】</p>
