--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
                     <p>2023年3月　立命館大学 情報理工学部 情報理工学科　卒業</p>
                     <p>2023年4月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　入学</p>
                     <p>2023年4月　立命館大学大学院　1年次対象成績優秀者奨学金　受賞</p>
+                    <p>2025年3月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　卒業</p>
+                    <p>現在　某SIerに勤務</p>
                     <br>
-                    <p>【所属研究室】</p>
+                    <p>【大学時代に在籍した研究室】</p>
                     <li>2022年4月～2024年3月
                         <a href="https://www.ritsumei.ac.jp/~y-kita/kcl/index.html" target="_blank">
                           <p>ナレッジコンピューティング研究室</p>
@@ -99,6 +101,7 @@
                         <li>御朱印集め</li>
                         <li>お団子巡り</li>
                         <li>アニメ・ドラマ鑑賞</li>
+                        <li>マッサージ</li>
                         <li>プログラミング</li>
                         <li>オントロジー（研究）</li>
                         <li>AAA</li>
@@ -132,7 +135,7 @@
             </div>
         </section>
         <section id="research">
-            <h2>Research</h2>
+            <h2>Research(学生時代)</h2>
             <h3>無機材料分析手法の選択支援のためのオントロジーの構築とシステムの開発</h3>
             <p>　無機材料の製造において，物質の材質や内部構造の調査のために材料の分析が重要であり，分析目的に応じた最適な分析手法を選択する必要がある．例えば，材料内の空洞(ボイド)の有無の調査が依頼目的であれば，「X線CT法」という分析手法を選ぶ必要がある．<br>
                 　しかしながら，現状では特に経験の浅い技術者が数ある分析手法の中から最適な分析手法を選択することは，無機材料やX線・電子線といった使用媒体などの特性や依頼された調査目的，その分析手法によって明らかにできる性質などに基づいて総合的に判断する必要があるため，困難な場合がある．<br>
