--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>2023年4月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　入学</p>
                     <p>2023年4月　立命館大学大学院　1年次対象成績優秀者奨学金　受賞</p>
                     <p>2025年3月　立命館大学大学院 情報理工学研究科 情報理工学専攻 博士課程前期課程 計算機科学コース　卒業</p>
-                    <p>現在　某SIerに勤務</p>
+                    <p>2025年4月〜現在　某SIerに勤務</p>
                     <br>
                     <p>【大学時代に在籍した研究室】</p>
                     <li>2022年4月～2024年3月
