--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
             <h2>Publication</h2>
             <ul>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：無機材料分析手法の選択支援のためのオントロジーの構築，
-                    第87回情報処理学会全国大会, 2025. <br>
-                    <a href="ipsj.pdf">Article</a> (<a href="https://www.ipsj.or.jp/event/taikai/87/WEB/data/pdf/1U-07.html">Article page site</a>)
+                    第87回情報処理学会全国大会, 1U-07，pp.2-635-636，2025. <br>
+                    <a href="sunada-IPSJ2025.pdf">Article</a> (<a href="https://www.ipsj.or.jp/event/taikai/87/WEB/data/pdf/1U-07.html">Article page site</a>)
                 </li>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：無機材料分析手法の選択支援のためのオントロジーの構築とシステムの提案，
                     人工知能学会第二種研究会資料，セマンティックウェブとオントロジー研究会，SIG-SWO-064-03，2024. <br>
