--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="ritsumeikan_logo.png" alt="立命館大学ロゴ" class="logo">
+<!--             <img src="ritsumeikan_logo.png" alt="立命館大学ロゴ" class="logo"> -->
             <div class="name">砂田 界渡</div>
         </div>
         <nav class="navbar">
@@ -183,6 +183,9 @@
         <section id="publications">
             <h2>Publication</h2>
             <ul>
+                <li>「無機材料分析手法の選択支援のためのオントロジーの構築とその利用」，立命館大学大学院　情報理工学系研究科　計算機科学コース　修士論文，2025.<br>
+                    <a href="sunada-syuron.pdf">Article</a> 
+                </li>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：無機材料分析手法の選択支援のためのオントロジーの構築，
                     第87回情報処理学会全国大会, 1U-07，pp.2-635-636，2025. <br>
                     <a href="sunada-IPSJ2025.pdf">Article</a> (<a href="https://www.ipsj.or.jp/event/taikai/87/WEB/data/pdf/1U-07.html">Article page site</a>)
