--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <h2>Publication</h2>
             <ul>
                 <li>「無機材料分析手法の選択支援のためのオントロジーの構築とその利用」，立命館大学大学院　情報理工学系研究科　計算機科学コース　修士論文，2025.<br>
-                    <a href="sunada-syuron.pdf">Article</a> 
+                    <a href="https://www.si-lab.org/thesis-ja.html">Article</a> 
                 </li>
                 <li>砂田 界渡，來村徳信，板倉 修一, 笹本 亮一, 細井 慎：無機材料分析手法の選択支援のためのオントロジーの構築，
                     第87回情報処理学会全国大会, 1U-07，pp.2-635-636，2025. <br>
