Add publication entry for ontology research
Added a publication entry for an ontology related to inorganic material analytical methods, including details of the conference and links to the article and program sites.

--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
         <section id="publications">
             <h2>Publication</h2>
             <ul>
+                <li>Kaito Sunada, Yoshinobu Kitamura, Shuichi Itakura, Ryoichi Sasamoto, Shizuka Hosoi : An Ontology for Selecting Inorganic Material Analytical Methods and Its Industrial Application, 
+                    In Proceedings of the 14th International Workshop on Formal Ontologies Meet Industry, Catania, Italy, September 9, 2025, 
+                    Part of the Joint Ontology Workshops (JOWO 2025) colocated with 15th International Conference on Formal Ontology in Information Systems (FOIS) 2025, Catania, Italy, September 10-12, 2025.<br>
+                    <a href="kita-fomi2025.pdf">Article page site</a> (<a href="https://fomiws.github.io/2025/program.html">Program site</a>)
+                </li>
                 <li>「無機材料分析手法の選択支援のためのオントロジーの構築とその利用」，立命館大学大学院　情報理工学系研究科　計算機科学コース　修士論文，2025.<br>
                     <a href="https://www.si-lab.org/thesis-ja.html">Article page site</a> 
                 </li>
